# -1S7A-PROGR.LOG.FUNC-EJ2025

./: Ejercicio: Kata FizzBuzz  Ejercicio: Kata FizzBuzz.hs
Unidad1/: Ejercicio_ Kata FizzBuzz.hs  EvaluacionFizzBuzz.hs
Unidad2/: EjerciciosHaskell0.hs
Unidad2/Ejercicios en haskell/: Ejercicios en haskell.hs
Unidad2/Pruebas Haskell/Pruebas en Haskell-Bowling/Bowling/: Bowling.cabal
Unidad2/Pruebas Haskell/Pruebas en Haskell-Bowling/Bowling/app/: Main.hs
Unidad3/: PlantasMedicinales.pl
u4/prolog/: conocimiento.pl~  gui.pl  gui.pl~  reglas.pl  reglas.pl~
u4/yerberito/: conocimiento.pl  gui  gui.pl  reglas.pl
